# AndroidNativeSurface

./: build.gradle  settings.gradle
.github/: dependabot.yml
.github/workflows/: build-app.yml
.helix/: languages.toml
android_native_surface/: Cargo.toml  build.rs
android_native_surface/src/: lib.rs  support.rs
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/rust/androidnativesurface/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
