[package]
name = "android_native_surface"
version = "0.1.0"
authors = ["Marijn Suijten <marijns95@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
android_logger = "0.13"
glutin = "0.30.0-beta.2"
jni = "0.19"
log = "0.4"
ndk = { git = "https://github.com/rust-windowing/android-ndk-rs", rev = "25e647a", features = ["api-level-28"] }
raw-window-handle = "0.5"

[build-dependencies]
gl_generator = "0.14"

[patch.crates-io]
glutin = { git = "https://github.com/rust-windowing/glutin.git", rev = "b9c5173" }
