[package]
name = "android_native_surface"
version = "0.1.0"
authors = ["Marijn Suijten <marijns95@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
android_logger = "0.13"
glutin = "0.30"
jni = "0.21"
log = "0.4"
ndk = { version = "0.7", features = ["api-level-28"] }
raw-window-handle = "0.5"

[build-dependencies]
gl_generator = "0.14"

[patch.crates-io]
# Latest main branch including surface_texture bindings
ndk = { git = "https://github.com/rust-mobile/ndk", rev = "9f72ec3" }
