[package]
name = "android_native_surface"
version = "0.1.0"
authors = ["Marijn Suijten <marijns95@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
android_logger = "0.13"
glutin = { version = "0.31", default-features = false, features = ["egl"] }
jni = "0.21"
log = "0.4"
ndk = { version = "0.8", default-features = false, features = ["media", "api-level-29", "rwh_05"] }
raw-window-handle = "0.5"
rustix = { version = "0.38", default-features = false, features = ["std", "pipe", "stdio"] }

[build-dependencies]
gl_generator = "0.14"

[patch.crates-io]
# glutin = { path = "../../glutin/glutin" }
ndk = { path = "../../ndk/ndk" }
